# rss-discord-bot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  rss-bot.yml
docs/: worklog.md
src/: discord.rs  main.rs  repository.rs  rss.rs
