[package]
name = "rss-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
feed-rs = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenvy = "0.15"
anyhow = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
